--- a/new.html
+++ b/new.html
@@ -3,9 +3,10 @@
 <head>
     <div class="tn">
         
-        <a class="nav-link" href="file:///C:/Users/Gamer/Documents/B%C3%A9la%20oldala/index.html">Kezdőlap</a>
+        <a class="nav-link" href="index.html">Kezdőlap</a>
         <a class="nav-link" href="">Újdonságok</a>
         <a class="nav-lin" href="https://www.twitch.tv/musketastarsak">Twitch</a>
+        <link rel="icon" href="pics/belaincon512.png">
 
     </div>
     <meta charset="UTF-8">
