--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="st.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="pics/belaincon512.png">
-   
 </head>
 
     <body> 
     <div class="topnav">
-        <a class="nav-link" href="#"></a>
+        <a class="nav-link" href="#"><img src="pics/belaincon512.png" alt="nem mukszik" width="27px" height="27px" ></a>
         <a class="nav-link" href="new.html">Újdonságok</a>
         <a class="nav-link" href="https://www.twitch.tv/musketastarsak">Twitch</a>
         <a class="nav-link" href="Don.html">Támogatás</a>
