--- a/new.html
+++ b/new.html
@@ -3,16 +3,16 @@
 <head>
     <div class="tn">
         
-        <a class="nav-link" href="index.html">Kezdőlap</a>
+        <a class="nav-link" href="index.html"><img src="pics/belaincon512" alt="nem mukszik" width="27" height="27"></a>
         <a class="nav-link" href="">Újdonságok</a>
         <a class="nav-lin" href="https://www.twitch.tv/musketastarsak">Twitch</a>
-        <link rel="icon" href="pics/belaincon512.png">
 
     </div>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="nst.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="pics/belaincon512.png">
+    <link rel="icon" href="pics/belaincon512.png">
 </head>
 <body>
     <div class="dolt"><h1>Hamarosan...</h1></div>
