--- a/Don.html
+++ b/Don.html
@@ -7,6 +7,13 @@
     <link rel="icon" href="pics/belaincon512.png">
 </head>
 <body>
-    
+    <div class="tp">
+
+        <a class="nav-link" href="index.html"><img src="pics/belaincon512.png" alt="nemmukszik" width="27" height="27" ></a>
+        <a class="nav-link" href="new.html">Újdonságok</a>
+        <a class="nav-link" href="https://www.twitch.tv/musketastarsak">Twitch</a>
+        <a class="nav-link" href="Don.html">Támogatás</a>
+    </div>
+     <div class="all"><h1>Hogyan tudsz minket tamogatni?</h1></div>
 </body>
 </html>
