--- a/new.html
+++ b/new.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <div class="tn">
-        
-        <a class="nav-link" href="index.html"><img src="pics/belaincon512" alt="nem mukszik" width="27" height="27"></a>
-        <a class="nav-link" href="">Újdonságok</a>
-        <a class="nav-lin" href="https://www.twitch.tv/musketastarsak">Twitch</a>
-
-    </div>
+    <link rel="icon" href="pics/belaincon512.png">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="nst.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/belaincon512.png">
-    <link rel="icon" href="pics/belaincon512.png">
+   
 </head>
 <body>
+    <div class="tn">
+        
+        <a class="nav-link" href="index.html"><img src="pics/belaincon512.png" alt="nem mukszik" width="27" height="27" ></a>
+        <a class="nav-link" href="">Újdonságok</a>
+        <a class="nav-lin" href="https://www.twitch.tv/musketastarsak">Twitch</a>
+        <a class="navlink" href="Don.html">Támogatás</a>
+    </div>
     <div class="dolt"><h1>Hamarosan...</h1></div>
 </body>
 </html>
