--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
     <div class="wc" style="text-align: center;"><h1 style="color: white; font: bold 14px/1.4 'Open Sans', arial, sans-serif; font-size: 40px;">Üdvözlünk Béla megújult weboldalán!</h1></div>
     <fieldset style="border-radius: 8px;">
-        <div class="alc" style="text-align: center; color: #99AAB5"><strong><h2>Béla, a modern személyes asszisztens</h2></strong></div>
+        <div class="alc" style="text-align: center; color: #99AAB5"><strong><h2>Új weboldal</h2></strong></div>
    <div class="all">     
-     <strong>    <h3 style="text-align: center; color: #FFFFFF">Béla egy inteligens asszisztens, mely megkönnyíti a mindennapjaidat. Jelenleg fejlesztés alatt ál, de ha úgy gondolod, te is segíthetsz nekünk!</h3>
-                <div style="text-align: center;">
-                    <button class="moreinfo" style="background-color: #7289DA; border: nonde; color: white; text-align: center; cursor: not-allowed; padding: 20px; position: relative; border-radius: 12px; margin: auto; width: 400px; display: inline-block; margin: 4px 2px; text-decoration: none; font: bold 14px/1.4 'Open Sans', arial, sans-serif; text-transform: uppercase; stroke: black;">További információ</button>
+     <strong>    <h3 style="text-align: center; color: #FFFFFF">Elkészült új weboldalunk. Látogasd meg most!</h3>
+                <div style="text-align: center;" href="home.html">
+                    <button class="moreinfo" href="" style="background-color: #7289DA; border: nonde; color: white; text-align: center; padding: 20px; position: relative; border-radius: 12px; margin: auto; width: 400px; display: inline-block; margin: 4px 2px; text-decoration: none; font: bold 14px/1.4 'Open Sans', arial, sans-serif; text-transform: uppercase; stroke: black;"><a href="home.html">MUTASD!</a></button>
                 </div>             
         </div>     
        
